  * Added %ann:cache and %ann:no-cache to enable or disable caching of results of functions with atomic parameter and return types.
  * Fixed bug 917923 (bug in copying outer var values into the eval dynamic context)
  * Fixed bug 924063 (sentence is incorrectly incremented when token characters end without sentence terminator)
  * Optimization: change the implementation of the free-vars annotation and got rid
    of the annotations map in expressions.
  * Fixed bug 909126 (bug in cloning of var_expr)
  * Fixed bug in destruction of exit_catcher_expr
  * Types-related optimizations for runtime operators (comparisons, FnBoolean, Or, And,
    Compare, instance-of, cast, castable, treat, promote).
  * Fixed bug #911585 (management of variables during eval)
  * Fixed bug #866423 (fn:empty and fn:exists iterators must reset their input in
    case of early-out)
  * Added index management function to the C++ api's StaticCollectionManager.
  * Fixed bug #872288 (reset recursive flag during node rename)
  * Fixed bug #905041 (allow for the default element and function namespaces to be
    set multiple times via the c++ api).
  * Fixed bug #907872 (segfault when returning an input ItemSequence from an external function).
  * Fixed bug #905050 (setting and getting the context item type via the c++ api).
  * Added createDayTimeDuration, createYearMonthDuration, createDocumentNode, createCommentNode, createPiNode to api's ItemFactory.
  * Added split function to the string module that allows for streamable tokenization but doesn't have regular expression
    support.
  * Fixed bug involving positional var and groupby 
  * Optimization: preallocate and reuse temp sequence iterator for LetVarITerator
    and CtxVarIterator.
  * Optimization: enhanced push-down of positional predicate into LetVarITerator
    and CtxVarIterator.
  * Fixed bug #867266 (do not hoist updating expressions)
  * Fixed bug #867022 (added location and params to some XPTY0004 errors)