@@ -1,0 +1,3 @@
+import module namespace u = "http://www.zorba-xquery.com/modules/uri";
+
+u:decode("foo=%E4%A5F%C5%F5", fn:false(), "ISO-8859-1")
