@@ -1,0 +1,4 @@
+import module namespace u = "http://www.zorba-xquery.com/modules/uri";
+
+u:decode("%C3%A4%C2%A8bc%C3%B6", fn:false())
+
