@@ -1,0 +1,3 @@
+import module namespace u = "http://www.zorba-xquery.com/modules/uri";
+
+u:decode("%C3%A4%C3%B6+%C3%BC", fn:true())
